@@ -1,5 +1,6 @@
 Changes for 1.3:
 
+ - umask(022) changed to umask(002) (Alexei)
  - added additional symbols for trigger expressions (slash, space) (Alexei)
  - fixed permissions of log files when starting as 'root' (Alexei)
  - fixed agent crash while evaluating proc.mem[] (Alexei)
